# NetworkTool

./: CMakeLists.txt
include/: NetworkClient.h  NetworkServer.h  global.h
src/: NetworkClient.cpp  NetworkServer.cpp
